[gd_scene load_steps=4 format=2]

[ext_resource path="res://sourcesans.tres" type="DynamicFont" id=1]
[ext_resource path="res://icons/abroad.png" type="Texture" id=2]
[ext_resource path="res://operationsscreen.gd" type="Script" id=3]

[node name="Panel" type="Panel"]
margin_right = 720.0
margin_bottom = 1480.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="."]
margin_right = 720.0
margin_bottom = 1480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_left = 20
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="VBoxContainer" parent="M"]
margin_left = 20.0
margin_top = 40.0
margin_right = 700.0
margin_bottom = 1440.0

[node name="CHeader" type="HBoxContainer" parent="M/R"]
margin_right = 680.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="M/R/CHeader"]
margin_right = 680.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="M/R/CHeader/CenterContainer"]
margin_left = 267.0
margin_top = 20.0
margin_right = 413.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="M/R/CHeader/CenterContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 40.0
rect_min_size = Vector2( 25, 40 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="M/R/CHeader/CenterContainer/HBoxContainer"]
margin_left = 35.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 1 )
text = "Operations"

[node name="Empty5" type="Label" parent="M/R"]
margin_top = 84.0
margin_right = 680.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="M/R"]
margin_top = 128.0
margin_right = 680.0
margin_bottom = 328.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
auto_height = true

[node name="Empty4" type="Label" parent="M/R"]
margin_top = 332.0
margin_right = 680.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="ItemDetails" type="Label" parent="M/R"]
margin_top = 376.0
margin_right = 680.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty3" type="Label" parent="M/R"]
margin_top = 420.0
margin_right = 680.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Empty6" type="Label" parent="M/R"]
margin_top = 464.0
margin_right = 680.0
margin_bottom = 504.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CReturn" type="HBoxContainer" parent="M/R"]
margin_top = 508.0
margin_right = 680.0
margin_bottom = 628.0

[node name="CallOff" type="Button" parent="M/R/CReturn"]
margin_right = 210.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Call Off"

[node name="Label" type="Label" parent="M/R/CReturn"]
margin_left = 214.0
margin_top = 53.0
margin_right = 466.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="Return" type="Button" parent="M/R/CReturn"]
margin_left = 470.0
margin_right = 680.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Return"
[connection signal="item_selected" from="M/R/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="M/R/CReturn/CallOff" to="." method="_on_CallOff_pressed"]
[connection signal="pressed" from="M/R/CReturn/Return" to="." method="_on_Return_pressed"]
